--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gorootde/node-red-paperless-ngx",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,9 @@
     "version": ">=2.0.0",
     "nodes": {
       "paperless-ngx-get-documents": "node-red-paperless-ngx/get-documents.js",
+      "paperless-ngx-get-tags": "node-red-paperless-ngx/get-tags.js",
+      "paperless-ngx-get-correspondents": "node-red-paperless-ngx/get-correspondents.js",
+      "paperless-ngx-get-customfields": "node-red-paperless-ngx/get-customfields.js",
       "paperless-ngx-server": "node-red-paperless-ngx/server.js"
     }
   },
