--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "paperless-ngx-get-tags": "node-red-paperless-ngx/get-tags.js",
       "paperless-ngx-get-correspondents": "node-red-paperless-ngx/get-correspondents.js",
       "paperless-ngx-get-customfields": "node-red-paperless-ngx/get-customfields.js",
+      "paperless-update-document": "node-red-paperless-ngx/update-document.js",
       "paperless-ngx-server": "node-red-paperless-ngx/server.js"
     }
   },
